2008-05-23  Ross Burton  <ross@openedhand.com>

	* libgssdp/gssdp-socket-source.c:
	Make the GSourceFuncs static const.

2008-05-19  Jorn Baayen  <jorn@openedhand.com>

	* NEWS:
	* configure.ac:
	* libgssdp/Makefile.am:

	Bump soname and release 0.6.1.

2008-05-13  Jorn Baayen  <jorn@openedhand.com>

	* doc/gssdp.types:

	Add types file so that introspection works.

2008-05-13  Jorn Baayen  <jorn@openedhand.com>

	* NEWS:
	* configure.ac:

	Release gssdp 0.6.

2008-04-15  Jorn Baayen  <jorn@openedhand.com>

	* libgssdp/gssdp-resource-browser.c (resource_available):
	* libgssdp/gssdp-resource-group.c
	(gssdp_resource_group_set_available):

	Use g_timeout_add_seconds(). We can because soup 2.4 depends
	on glib 2.16.

2008-04-15  Jorn Baayen  <jorn@openedhand.com>

	* gssdp-1.0-uninstalled.pc.in:
	* gssdp-1.0.pc.in:

	Update for soup 2.4.

2008-04-14  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* configure.ac:
	* libgssdp/gssdp-client.c (parse_http_request),
	(parse_http_response), (socket_source_cb):
	* libgssdp/gssdp-resource-browser.c (resource_available),
	(resource_unavailable), (received_discovery_response),
	(received_announcement), (message_received_cb):
	* libgssdp/gssdp-resource-group.c (message_received_cb),
	(discovery_response_timeout):
	* tools/Makefile.am:
	* tools/gssdp-device-sniffer.c (packet_header_to_string),
	(display_packet), (on_packet_selected), (packet_to_treeview_data),
	(append_packet), (on_ssdp_message), (create_packet_treemodel):
	
	Port to libsoup 2.4.

2008-03-12  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* configure.ac:

	Require correct version of libsoup (>= 2.2.100).

2008-02-26  Jorn Baayen  <jorn@openedhand.com>

	* autogen.sh:

	Don't call glib-gettextize.

2008-02-24  Jorn Baayen  <jorn@openedhand.com>

	* configure.ac:

	Remove last trace of unused i18n.

2008-02-23  Jorn Baayen  <jorn@openedhand.com>

	* NEWS:
	* configure.ac:

	Release 0.4.2.

2008-02-09  Zeeshan Ali Khattak  <zeenix@gstreamer.net>
